# is2-content-automation

./: .dockerignore  .env-example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  SANDBOX-NOTES.md  activity.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  prompt.md  pyproject.toml  ralph-claude.sh  search-refactor.md
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
.ralph-logs/: ralph_session_20260222_134155.md  ralph_session_20260222_143550.md  ralph_session_20260222_150419.md  ralph_session_20260222_151313.md  ralph_session_20260222_190236.md  ralph_session_20260222_205351.md  ralph_session_20260222_222638.md  ralph_session_20260222_222757.md  ralph_session_20260222_230744.md  ralph_session_20260223_162610.md  ralph_session_20260223_200020.md
_context/: PRD.md  project-details.md  tasks.csv
_n8n-project/: .dockerignore  .env.example  .gitignore  DATABASES.md  Dockerfile  INTEGRATIONS.md  README.md  docker-compose.local.yml  init-users.sh
credentials/: google-service-account.example.json
docs/: architecture.md  billing-alerts.md  code-walkthrough.md  credentials.md  guided-testing.md  pipeline-steps.md  prd.md  prompt-review.md  services.md  user-guide.md
ica/: __main__.py  app.py  errors.py  logging.py  scheduler.py
ica/cli/: config_editor.py  log_filter.py
ica/config/: __init__.py  llm_config.py  settings.py  validation.py
ica/db/: __init__.py  crud.py  models.py  repository.py  session.py
ica/guided/: artifacts.py  fixtures.py  google_settings.py  runner.py  slack_adapter.py  state.py  templates.py
ica/llm_configs/: __init__.py  email-preview-llm.json  email-subject-llm.json  email-subject-regeneration-llm.json  freshness-check-llm.json  html-generation-llm.json  html-regeneration-llm.json  learning-data-extraction-llm.json  linkedin-carousel-llm.json  linkedin-regeneration-llm.json  loader.py  markdown-generation-llm.json  markdown-regeneration-llm.json  markdown-structural-validation-llm.json  markdown-voice-validation-llm.json  relevance-assessment-llm.json  schema.py  social-media-caption-llm.json  social-media-post-llm.json  social-media-regeneration-llm.json  (+4 more)
scripts/: export_articles.py  test_collection_curation.py  test_content_processing.py  test_generation_validation.py  test_google.py  test_google_search.py  test_html_generation.py  test_learning_system.py  test_markdown_validation.py  test_parallel_outputs.py  test_slack.py
tests/: test_app.py  test_cli.py  test_errors.py  test_log_filter.py  test_logging.py  test_scheduler.py
(+140 files in other folders)
