[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "is2news"
version = "0.1.0"
description = "AI newsletter generation pipeline for IS2-News"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
