[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ica"
version = "0.1.0"
description = "AI newsletter generation pipeline — replaces n8n-based IS2-News system"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Kevin Howard Goldberg", email = "kgoldberg@imagistic.com" },
]

dependencies = [
    # Web framework & server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23.0",

    # LLM integration
    "litellm>=1.55",

    # Slack Bot
    "slack-bolt>=1.21",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",

    # Google APIs
    "google-api-python-client>=2.160",
    "google-auth>=2.37",
    "google-auth-oauthlib>=1.2",

    # HTTP client
    "httpx>=0.28",

    # Scheduler
    "apscheduler>=3.10,<4",

    # Configuration
    "pydantic-settings>=2.7",

    # CLI
    "typer>=0.15",
    "rich>=13.9",

    # Email notifications
    "aiosmtplib>=3.0",
]

[project.scripts]
ica = "ica.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # litellm's LoggingWorker creates an async_success_handler coroutine during
    # cleanup (logging_worker.py) that cannot be awaited outside its event loop.
    # This is a third-party library bug; suppress to keep test output clean.
    "ignore:coroutine 'Logging.async_success_handler' was never awaited:RuntimeWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF001",  # Ambiguous unicode chars (en-dash) used intentionally in prompts/Slack messages
    "RUF002",  # Ambiguous unicode chars in docstrings
    "RUF003",  # Ambiguous unicode chars in comments
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["ica"]
